# columnar

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Changelog.md  GetFastPFOR.cmake  LICENSE  LICENSE-binary  NOTICE  NOTICE-binary  README.md  builder.cpp  builder.h  columnar.cpp  columnar.h  config_cmake.h.in  gitsync_columnar.sh  manticore_src.txt  packaging.yml  packversion.cmake  rev.cmake  semver.sh  smoke.sh  testing.cmake
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: CI.yml  auto_version.yml  build_template.yml  clt_tests.yml  embedding_build_template.yml  mirror.yml  nightly_no_avx2.yml  pack.yml  pack_publish.yml  test.yml  test_template.yml  win_test_template.yml
accessor/: CMakeLists.txt  accessor.h  accessorbool.cpp  accessorbool.h  accessorint.cpp  accessorint.h  accessormva.cpp  accessormva.h  accessorstr.cpp  accessorstr.h  accessortraits.h  attributeheader.cpp  attributeheader.h  check.cpp  check.h
builder/: builderbool.cpp  builderbool.h  builderint.cpp  builderint.h  builderminmax.h  buildermva.cpp  buildermva.h  builderstr.cpp  builderstr.h  buildertraits.cpp  buildertraits.h
cmake/: CPackOptions.cmake.in  CommonInfo.cmake  GetAnnoy.cmake  GetCRoaring.cmake  GetFastPFOR.cmake  GetHNSW.cmake  GetMKL.cmake  GetONNXRuntime.cmake  GetPGM.cmake  GetStreamvbyte.cmake  GetVersion.cmake  SetBuildType.cmake  build_embeddings.cmake  citest.cmake  columnar-config.cmake.in  copy_embeddings_artifacts.cmake  external-build.cmake.in  fastpfor.cmake.in  helpers.cmake  init_cache_settings.cmake  printers.cmake  rev.cmake  revcheck.cmake  run_embeddings_cargo.cmake  update_bundle.cmake
cmake/builds/: CommonDeb.cmake  CommonRpm.cmake  build_bionic.cmake  build_bookworm.cmake  build_bullseye.cmake  build_buster.cmake  build_default.cmake  build_focal.cmake  build_jammy.cmake  build_macos.cmake  build_rhel.cmake  build_rhel10.cmake  build_rhel7.cmake  build_rhel8.cmake  build_rhel9.cmake  build_stretch.cmake  build_wheezy.cmake  build_windows.cmake  build_xenial.cmake
cmake/cpack/: DEB.cmake
columnar/: CMakeLists.txt  builder.cpp  builder.h  columnar.cpp  columnar.h
columnar/accessor/: CMakeLists.txt  accessor.cpp  accessor.h  accessorbool.cpp  accessorbool.h  accessorint.cpp  accessorint.h  accessormva.cpp  accessormva.h  accessorstr.cpp  accessorstr.h  accessortraits.cpp  accessortraits.h  attributeheader.cpp  attributeheader.h  check.cpp  check.h
columnar/builder/: CMakeLists.txt  builderbool.cpp  builderbool.h  builderint.cpp  builderint.h  builderminmax.h  buildermva.cpp  buildermva.h  builderstr.cpp  builderstr.h  buildertraits.cpp  buildertraits.h
common/: CMakeLists.txt  blockiterator.h  filter.cpp  filter.h  interval.h  schema.h
config/: CPackOptions.cmake
embeddings/: .editorconfig  .gitignore  CHUNKING.md  Cargo.toml  INSTRUCTIONS.md  README.md  build.rs  cbindgen.toml  manticoresearch_text_embeddings.h
embeddings/examples/: ort_parallel.rs
embeddings/src/: chunk.rs  error.rs  error_handling_test.rs  error_test.rs  ffi.rs  integration_test.rs  lib.rs  panic_guard.rs  panic_guard_test.rs  test_modules.rs  utils.rs  utils_test.rs
embeddings/src/model/: create_model_test.rs  ffi_test.rs  jina.rs  jina_test.rs  local.rs  local_test.rs  mod.rs  openai.rs  openai_test.rs  qwen.rs  text_model_wrapper.rs  voyage.rs  voyage_test.rs
knn/: CMakeLists.txt  embeddings.cpp  embeddings.h  iterator.cpp  iterator.h  knn.cpp  knn.h  manticoresearch_text_embeddings.h  quantile.cpp  quantile.h  quantizer.cpp  quantizer.h  space.cpp  space.h  termination.cpp  termination.h
libfastpfor/: CMakeLists.txt
licenses-binary/: LICENSE-FastPfor
misc/: build-libs-for-test-kit.sh
misc/junit/: citestresult.cmake
pgm/: CMakeLists.txt
roaring/: CMakeLists.txt
secondary/: CMakeLists.txt  blockreader.cpp  blockreader.h  builder.cpp  builder.h  common.h  iterator.cpp  iterator.h  pgm.h  secondary.cpp  secondary.h  sidx.h
streamvbyte/: CMakeLists.txt
util/: .gitattributes  CMakeLists.txt  bitvec.h  codec.cpp  codec.h  delta.cpp  delta.h  delta_impl.h  interval.h  reader.cpp  reader.h  util.cpp  util.h  util_private.cpp  util_private.h  version.cmake  version.cpp  version.h.in
