[package]
name = "manticore-knn-embeddings"
version = "1.1.1"
edition = "2021"

# Candle: git dep so CI works without a local candle clone.
# For local dev with ../../candle, add a [patch] section to use path deps.
[dependencies]
tokenizers = "0.15.2"
unicode-segmentation = "1"
hf-hub = { git = "https://github.com/huggingface/hf-hub.git", rev = "ac22200ea0b5af4d8c362f699be0340647b19060", default-features = false,features = ["ureq"] }
anyhow = "1.0.81"
serde_json = "1.0.114"
serde = "1.0.197"
rand = "0.8.5"
reqwest = { version = "0.12.8", default-features = false, features = ["blocking", "json", "rustls-tls"] }

candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
ort = { version = "2.0.0-rc.9", default-features = false, features = ["std"] }
rayon = "1.11"

[features]
default = []
download-ort = ["ort/download-binaries", "ort/tls-rustls"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[build-dependencies]
cbindgen = "0.26.0"

# Example of customizing the library in Cargo.toml.
[lib]
name = "manticore_knn_embeddings"
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = "debuginfo"

# ─── Debug-build stack-size fix for candle / BERT inference ──────────────────
#
# The Manticore daemon serves SQL queries on Boost coroutines whose stacks are
# 128 KiB (0x20000) — see "thread stack size = 0x20000" in any searchd crash
# dump. That budget is large enough for release builds of candle's BERT forward
# pass, but in *debug* builds Rust generates much fatter stack frames (no
# inlining, no dead-store elimination, no SROA). candle's transformer layers
# call deep through gemm and tensor ops; the cumulative frame size overflows
# the daemon's 128 KiB coroutine stack and silently corrupts whatever sits
# next to it in memory. The corruption then surfaces seconds later as a glibc
# heap-corruption abort in unrelated code (response buffer free, coroutine
# stack destruct, malloc on accept) — exactly the bug we chased through
# test_481, test_490, test_508.
#
# Fix: compile the heavy numerical dependencies with `opt-level = 1` even in
# debug. opt-level 1 enables function inlining and basic SROA, which collapses
# candle's frame depth back to a size that fits in 128 KiB. Our own crate
# stays at debug's default opt-level 0 so we keep full debuggability on the
# code we actually maintain.
#
# This is the standard Rust pattern for "third-party heavy crates that bloat
# debug builds" — used by serde-json, image, regex, ndarray, etc. Zero
# runtime cost in release; small CI build-time hit in debug.
[profile.dev.package.candle-core]
opt-level = 1
[profile.dev.package.candle-nn]
opt-level = 1
[profile.dev.package.candle-transformers]
opt-level = 1
[profile.dev.package.candle-kernels]
opt-level = 1
[profile.dev.package.gemm]
opt-level = 1
[profile.dev.package.gemm-common]
opt-level = 1
[profile.dev.package.gemm-f16]
opt-level = 1
[profile.dev.package.gemm-f32]
opt-level = 1
[profile.dev.package.gemm-f64]
opt-level = 1
[profile.dev.package.gemm-c32]
opt-level = 1
[profile.dev.package.gemm-c64]
opt-level = 1
[profile.dev.package."half"]
opt-level = 1

[dev-dependencies]
approx = "0.5.1"
ort = { version = "2.0.0-rc.9", default-features = false, features = ["download-binaries", "tls-rustls", "ndarray"] }
ndarray = "0.16"

[patch.crates-io]
# candle-core = { path = "../../candle/candle-core" }
# candle-nn =  { path = "../../candle/candle-nn" }
# candle-transformers =  { path = "../../candle/candle-transformers" }
# candle-onnx = { path = "../../candle/candle-onnx" }

candle-core = { git = "https://github.com/manticoresoftware/candle.git", rev = "0051854b382cc83e2bbea3f1ce6ac6488c655695" }
candle-nn = { git = "https://github.com/manticoresoftware/candle.git", rev = "0051854b382cc83e2bbea3f1ce6ac6488c655695" }
candle-transformers = { git = "https://github.com/manticoresoftware/candle.git", rev = "0051854b382cc83e2bbea3f1ce6ac6488c655695" }
